update: new readme version